--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,15 @@
 @import 'base/variables';
+@import 'blocks/promo';
+@import 'blocks/header';
+@import 'blocks/buttons'; 
+@import 'blocks/advantages';
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
+.container {
+    max-width: 950px;
+    margin: 0 auto; 
+}
+
+@import 'base/media';
+
