--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -12,6 +12,7 @@
         line-height: 30px;
         color: #0D0D0D;
         text-align: center;
+        text-transform: uppercase;
     }
     &__block {
         margin: 0 auto;
