--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -15,4 +15,11 @@
         height: 50px;
         margin-top: 67px;
     }
+    &_submit {
+        width: 100%;
+        height: 55px;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 25px;
+    }
 }
