--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,10 @@
 @import 'blocks/header';
 @import 'blocks/buttons'; 
 @import 'blocks/advantages';
+@import 'blocks/consultation';
+@import 'blocks/titles';
+@import 'blocks/forms';
+@import 'blocks/carousel';
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
