--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -11,7 +11,7 @@
         transform: translateY(-50%);
         left: -66px;
         border: none;
-        background-color: #FFFFFF;
+        background-color: #FFF;
         img {
             width: 31px;
             height: 50px;
