--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,8 @@
 @import 'blocks/titles';
 @import 'blocks/forms';
 @import 'blocks/carousel';
+@import 'blocks/catalog';
+@import 'blocks/reviews';
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
