--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -8,6 +8,12 @@
     font-size: 12px;
     color: #FFFFFF;
     text-transform: uppercase;
+    transition: color 1s, box-shadow 0.6s, transform 1s;
+    &:hover {
+        transform: scale(105%);
+        background: linear-gradient(to left, $main-color, rgb(158, 13, 13));
+        box-shadow: 2px 2px 10px rgba(8, 8, 8, 0.5);
+    }
     &_main {
         font-size: 16px;
         line-height: 25px;
