--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -9,4 +9,13 @@
         color: #FFFFFF;
         margin-top: 8px;
     }
+    .error {
+        text-align: center;
+        border: 1px solid red;
+        margin-bottom: 15px;
+    }
+    label.error {
+        border: none;
+        color: #FFFFFF;
+    }
 }
